--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,6 +14,9 @@
           </div>
         </div>
       </form>
+      <div class="text-right">
+          <a href="/restaurants/new"><button class="btn btn-primary">新增餐廳</button></a>
+      </div>
     </div>
   </div>
 </div>
@@ -38,6 +41,13 @@
               {{this.rating}}
               <i class="fas fa-star fa-xs"></i>
             </span>
+          </div>
+          <div class="card-footer d-flex justify-content-end flex-wrap">
+            <a href="/restaurants/{{this._id}}/edit"><button class="btn btn-link btn-sm">Edit</button></a>
+            <a href="/restaurants/{{this._id}}"><button class="btn btn-link btn-sm">Details</button></a>
+            <form action="/restaurants/{{this._id}}?_method=DELETE" method="POST">
+              <button type="submit" class="btn btn-danger btn-sm text-white">delete</button>
+            </form>
           </div>
         </div>
       </a>
