--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,19 +3,17 @@
   <div class="search-bar-outer">
     <div class="search-bar-inner">
       <form action="/search">
-        <h4 class="mb-2 search-bar-title">尋找餐廳：</h4>
+        <h4 class="mb-2">尋找餐廳：</h4>
         <div class="input-group">
-          <input type="text" name="keyword" class="form-control" placeholder="輸入餐廳、分類" aria-label="Restaurant Name..."
+          <input type="text" name="keywords" class="form-control" placeholder="輸入餐廳、分類" aria-label="Restaurant Name..."
             aria-describedby="search-button" value="{{keywords}}" />
           <div class="input-group-append">
-            <button class="btn btn-major" type="submit" id="search-button">
-              <i class="fas fa-search"></i>
-            </button>
+            <button class="btn btn-major" type="submit" id="search-button"><i class="fas fa-search"></i></button>
           </div>
         </div>
       </form>
       <div class="text-right">
-          <a href="/restaurants/new"><button class="btn btn-primary">新增餐廳</button></a>
+        <a href="/restaurants/new"><button class="btn btn-primary">新增餐廳</button></a>
       </div>
     </div>
   </div>
@@ -45,13 +43,14 @@
           <div class="card-footer d-flex justify-content-end flex-wrap">
             <a href="/restaurants/{{this._id}}/edit"><button class="btn btn-link btn-sm">Edit</button></a>
             <a href="/restaurants/{{this._id}}"><button class="btn btn-link btn-sm">Details</button></a>
-            <form action="/restaurants/{{this._id}}?_method=DELETE" method="POST">
+            <form action="/restaurants/{{this._id}}/delete" method="POST">
               <button type="submit" class="btn btn-danger btn-sm text-white">delete</button>
             </form>
           </div>
         </div>
       </a>
     </div>
+
     {{/each}}
   </div>
 </div>
