--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,12 +4,32 @@
     <div class="search-bar-inner">
       <form action="/search">
         <h4 class="mb-2">尋找餐廳：</h4>
-        <div class="input-group">
+        <div class="input-group mb-2 mb-sm-0 mr-sm-2">
           <input type="text" name="keywords" class="form-control" placeholder="輸入餐廳、分類" aria-label="Restaurant Name..."
             aria-describedby="search-button" value="{{keywords}}" />
           <div class="input-group-append">
             <button class="btn btn-major" type="submit" id="search-button"><i class="fas fa-search"></i></button>
           </div>
+          <div class="dropdown ms-5">
+            <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              排序：{{ sortString }}
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+              {{#if keyword}}
+              <li><a class="dropdown-item" href="?keyword={{ keyword }}&sortQuery=name">餐廳名稱：A → Z</a></li>
+              <li><a class="dropdown-item" href="?keyword={{ keyword }}&sortQuery=name_desc">餐廳名稱：Z → A</a></li>
+              <li><a class="dropdown-item" href="?keyword={{ keyword }}&sortQuery=category">類別</a></li>
+              <li><a class="dropdown-item" href="?keyword={{ keyword }}&sortQuery=location">地區</a></li>
+              {{else}}
+              <li><a class="dropdown-item" href="?sortQuery=name">餐廳名稱：A → Z</a></li>
+              <li><a class="dropdown-item" href="?sortQuery=name_desc">餐廳名稱：Z → A</a></li>
+              <li><a class="dropdown-item" href="?sortQuery=category">類別</a></li>
+              <li><a class="dropdown-item" href="?sortQuery=4">地區</a></li>
+              {{/if}}
+            </ul>
+          </div>
+
         </div>
       </form>
       <div class="text-right">
@@ -43,7 +63,7 @@
           <div class="card-footer d-flex justify-content-end flex-wrap">
             <a href="/restaurants/{{this._id}}/edit"><button class="btn btn-link btn-sm">Edit</button></a>
             <a href="/restaurants/{{this._id}}"><button class="btn btn-link btn-sm">Details</button></a>
-            <form action="/restaurants/{{this._id}}/delete" method="POST">
+            <form action="/restaurants/{{this._id}}?_method=DELETE" method="POST">
               <button type="submit" class="btn btn-danger btn-sm text-white">delete</button>
             </form>
           </div>
