--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,10 +21,22 @@
     <nav class="navbar navbar-light bg-light">
       <div class="container">
         <a class="navbar-brand" href="/">
-          <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png"
-            width="30" height="30" class="d-inline-block align-top" alt="我的餐廳清單">
+          <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png" width="30"
+            height="30" class="d-inline-block align-top" alt="我的餐廳清單">
+          {{#if isAuthenticated}}
+          {{ user.name }}的餐廳清單
+          {{else}}
           我的餐廳清單
+          {{/if}}
         </a>
+        {{#if isAuthenticated}}
+        <div>
+          <a href="/users/logout"><button type="button" class="btn btn-outline-info">Login</button></a>
+        </div>
+        
+        {{else}}
+        <a href="/users/login"><button type="button" class="btn btn-outline-info">Logout</button></a>
+        {{/if}}
       </div>
     </nav>
 
