feat: fix index.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,11 +31,11 @@
         </a>
         {{#if isAuthenticated}}
         <div>
-          <a href="/users/logout"><button type="button" class="btn btn-outline-info">Login</button></a>
+          <a href="/users/logout"><button type="button" class="btn btn-outline-info">Logout</button></a>
         </div>
         
         {{else}}
-        <a href="/users/login"><button type="button" class="btn btn-outline-info">Logout</button></a>
+        <a href="/users/login"><button type="button" class="btn btn-outline-info">Login</button></a>
         {{/if}}
       </div>
     </nav>
